--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,7 +65,7 @@ form.main input[type=text] {
     font-size: 14px;
     border: none;
     float: left;
-    width: 80%;
+    width: 75%;
     background: #e0e0e0;
     border-radius: 20px 0 0 20px;
 }
@@ -73,7 +73,7 @@ form.main input[type=text] {
     /* Style the submit button */
 form.main button {
     float: left;
-    width: 20%;
+    width: 25%;
     padding: 10px;
     /* background-color: #4CAF50; */
     background-color: rgb(21,35,51);
@@ -110,3 +110,17 @@ form.main::after {
     clear: both;
     display: table;
 }
+
+@media only screen and (max-width: 480px) {
+    form.main button {
+        width: 25%;
+        font-size: 10px;
+    }
+    
+    form.main input[type=text] {
+        font-size: 10px;
+        width: 75%;
+
+    }
+    
+  }
